kubernetes/base/api/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ms-catalog
  labels:
    app: ms-catalog
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 5000
  selector:
    app: ms-catalog
