kubernetes/base/api/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ms-catalog
  annotations:
    nginx.ingress.kubernetes.io/auth-url: http://ms-auth.goodfood.svc.cluster.local/auth/authorized
    nginx.ingress.kubernetes.io/auth-response-headers: UserID, Role
    nginx.ingress.kubernetes.io/auth-snippet: |
      proxy_set_header FromUrl $request_uri; proxy_set_header Method $request_method;
spec:
  ingressClassName: nginx
  rules:
    - host: goodfood.localdev.me
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: ms-catalog
                port:
                  number: 80
            path: /catalog/
